--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj
@@ -184,6 +184,7 @@
     <ClCompile Include="PlayStateHUD.cpp" />
     <ClCompile Include="PoolWrapper.cpp" />
     <ClCompile Include="RenderComponent.cpp" />
+    <ClCompile Include="SafeZoneScene.cpp" />
     <ClCompile Include="SpriteComponent.cpp" />
     <ClCompile Include="Money.cpp" />
     <ClCompile Include="TextUI.cpp" />
@@ -262,6 +263,7 @@
     <ClInclude Include="PlayStateHUD.h" />
     <ClInclude Include="PoolWrapper.h" />
     <ClInclude Include="RenderComponent.h" />
+    <ClInclude Include="SafeZoneScene.h" />
     <ClInclude Include="SDLError.h" />
     <ClInclude Include="SpriteComponent.h" />
     <ClInclude Include="Money.h" />
