--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
@@ -211,6 +211,8 @@
     <ClCompile Include="Melee.cpp">
       <Filter>Archivos de código\Melee</Filter>
     </ClCompile>
+    <ClCompile Include="DialogueTextUI.cpp" />
+    <ClCompile Include="DialoguePanel.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -459,6 +461,8 @@
     <ClInclude Include="Melee.h">
       <Filter>Archivos de encabezado\Melee</Filter>
     </ClInclude>
+    <ClInclude Include="DialogueTextUI.h" />
+    <ClInclude Include="DialoguePanel.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Archivos de encabezado">
