--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
@@ -211,9 +211,16 @@
     <ClCompile Include="Melee.cpp">
       <Filter>Archivos de código\Melee</Filter>
     </ClCompile>
-    <ClCompile Include="DialogueTextUI.cpp" />
-    <ClCompile Include="DialoguePanel.cpp" />
-    <ClCompile Include="FramedImageUI.cpp" />
+    <ClCompile Include="DialoguePanel.cpp">
+      <Filter>Archivos de código\HUDs</Filter>
+    </ClCompile>
+    <ClCompile Include="FramedImageUI.cpp">
+      <Filter>Archivos de código\UIElements</Filter>
+    </ClCompile>
+    <ClCompile Include="DialogueTextUI.cpp">
+      <Filter>Archivos de código\UIElements</Filter>
+    </ClCompile>
+    <ClCompile Include="AnimatedImageUI.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -462,9 +469,16 @@
     <ClInclude Include="Melee.h">
       <Filter>Archivos de encabezado\Melee</Filter>
     </ClInclude>
-    <ClInclude Include="DialogueTextUI.h" />
-    <ClInclude Include="DialoguePanel.h" />
-    <ClInclude Include="FramedImageUI.h" />
+    <ClInclude Include="DialogueTextUI.h">
+      <Filter>Archivos de encabezado\UIElements</Filter>
+    </ClInclude>
+    <ClInclude Include="FramedImageUI.h">
+      <Filter>Archivos de encabezado\UIElements</Filter>
+    </ClInclude>
+    <ClInclude Include="DialoguePanel.h">
+      <Filter>Archivos de código\HUDs</Filter>
+    </ClInclude>
+    <ClInclude Include="AnimatedImageUI.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Archivos de encabezado">
