--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
@@ -220,7 +220,9 @@
     <ClCompile Include="DialogueTextUI.cpp">
       <Filter>Archivos de código\UIElements</Filter>
     </ClCompile>
-    <ClCompile Include="AnimatedImageUI.cpp" />
+    <ClCompile Include="AnimatedImageUI.cpp">
+      <Filter>Archivos de código\UIElements</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -478,7 +480,9 @@
     <ClInclude Include="DialoguePanel.h">
       <Filter>Archivos de código\HUDs</Filter>
     </ClInclude>
-    <ClInclude Include="AnimatedImageUI.h" />
+    <ClInclude Include="AnimatedImageUI.h">
+      <Filter>Archivos de encabezado\UIElements</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Archivos de encabezado">
