Spawner enemy y bomber (#37)
* Puedes generar nuevos enemigos

* Añadido el enemigo spawner

* Implementado SpawnerEnemy (no funciona del todo)

* Spawner Enemy v2

* SpawnerEnemy (vFinal sin animaciones)

* arreglado bug (descubierto por miriam)

* Mejorado a sensor

* Bomber enemy (#36)

* primera subida

* Bala explosiva hecha

* Bomber finished

--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
@@ -211,6 +211,16 @@
     <ClCompile Include="AmmoPackage.cpp">
       <Filter>Archivos de código\Objects</Filter>
     </ClCompile>
+    <ClCompile Include="SpawnerEnemy.cpp">
+      <Filter>Archivos de código\Objects\Enemies</Filter>
+    </ClCompile>
+    <ClCompile Include="Capsule.cpp">
+      <Filter>Archivos de código\Objects\Enemies</Filter>
+    </ClCompile>
+    <ClCompile Include="BomberEnemy.cpp">
+      <Filter>Archivos de código\Objects\Enemies</Filter>
+    </ClCompile>
+    <ClCompile Include="ExplosiveBullet.cpp" />
     <ClCompile Include="FlyingEnemy.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -460,6 +470,16 @@
     <ClInclude Include="PlayerArm.h">
       <Filter>Archivos de encabezado\Objects</Filter>
     </ClInclude>
+    <ClInclude Include="SpawnerEnemy.h">
+      <Filter>Archivos de encabezado\Objects\Enemies</Filter>
+    </ClInclude>
+    <ClInclude Include="Capsule.h">
+      <Filter>Archivos de encabezado\Objects\Enemies</Filter>
+    </ClInclude>
+    <ClInclude Include="BomberEnemy.h">
+      <Filter>Archivos de encabezado\Objects\Enemies</Filter>
+    </ClInclude>
+    <ClInclude Include="ExplosiveBullet.h" />
     <ClInclude Include="FlyingEnemy.h" />
   </ItemGroup>
   <ItemGroup>
